--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
 body {padding: 10px;}
 div {padding-bottom: 20px;}
 keyword {color: #ff0000; font-weight: bold;}
+div.entry {padding-bottom:2px;}
+div.wn {color: #777;}
