--- a/style.css
+++ b/style.css
@@ -4,3 +4,4 @@ keyword {color: #ff0000; font-weight: bold;}
 div.entry {padding-bottom:2px;}
 div.wn {color: #777;}
 #panel {float: right;}
+pron {padding-left:1em; color: #aaa;}
